<resources>
    <!--    <string name="app_name">Dicoding Events</string>-->
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_finished">Finished</string>
    <string name="title_settings">Settings</string>
    <string name="thumbnail_event_image">Thumbnail Event Image</string>
    <string name="close_button">Close Button</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection">No Connection</string>
    <string name="image_cover">Image Cover</string>
    <string name="visit_webpage">Visit Webpage</string>
    <string name="type_something">Type something…</string>
    <string name="upcoming_events">Upcominsg Events</string>
    <string name="finished_events">Finished Events</string>
    <string name="organized_by">Organized by: %1$s</string>
    <string name="remaining_quota">Remaining quota: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->

    <!--    new new-->
    <string name="app_name">Lokalook</string>
    <string name="home">Home</string>
    <string name="budgeting">Smart Budgeting</string>
    <string name="camera">Camera</string>
    <string name="trend">Trend</string>
    <string name="user">User</string>
    <string name="homepage">Kemana Kamu akan Pergi\nHari Ini</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_place">Tempat Populer</string>
    <string name="maybe_love">Tempat yang Mungkin Kamu Suka</string>
    <!-- new budgeting-->
    <string name="rencana_destinasi">Buat Rencana Destinasimu</string>
    <string name="judul_destinasi">Smart Budgeting</string>
    <string name="txt_btn">Lanjutkan</string>
    <string name="jml_orang">Jumlah Orang</string>
    <string name="budget">Budget</string>
    <string name="wisata">Wisata</string>
    <string name="makanan">Makanan</string>
    <string name="perjalanan">Tujuan Perjalanan</string>
    <string name="destinasi">Masukkan destinasi wisata</string>
    <string name="back_button">Tombol Kembali</string>
    <string name="notification_icon">Ikon Notifikasi</string>
    <string name="appbar_user">Akun Pengguna</string>
    <string name="ubah">Ubah Kata Sandi</string>
    <string name="namatempat">Curug Telu</string>
    <string name="hargaa">15K</string>
    <string name="hambar">Hasil Pencarian Gambar</string>
    <string name="analyze">Scan Gambar</string>
    <string name="galery">Pilih Gambar dari Galeri</string>
    <string name="back">Back</string>
    <string name="ailokalook">Lokalook AI</string>
    <string name="startai">Hai Lokalook apakah kau bisa membantuku?</string>
    <string name="balasai">Tentu, apa yang ingin kau tanyakan</string>
    <string name="ketik">Tulis Pesan</string>
    <string name="send">Send</string>
    <string name="mic">Mic</string>
    <string name="notif">Notifikasi</string>
    <string name="hariini">Hari Ini</string>
    <string name="kemarin">Kemarin</string>
    <string name="judul">Update System</string>
    <string name="waktu">08.00</string>


<!--    login-->
    <string name="dashboard" translatable="false">Dashboard Story App</string>
    <string name="login" translatable="false">Masuk</string>
    <string name="message_login" translatable="false">Masuk ke akun anda</string>
    <string name="message_register" translatable="false">Daftarkan akun anda</string>
    <string name="register" translatable="false">Daftar</string>
    <string name="sign_out" translatable="false">Keluar</string>
    <string name="have_account" translatable="false">Sudah punya akun?</string>
    <string name="dont_have_account" translatable="false">Belum punya akun?</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="name">Nama</string>
    <string name="hint_email">Masukkan email anda</string>
    <string name="hint_password">Masukkan password anda</string>
    <string name="hint_name">Masukkan nama anda</string>
    <string name="user_not_found">User tidak ditemukan!</string>
    <string name="login_success">Login Berhasil!</string>
    <string name="register_failed">Register akun gagal!</string>
    <string name="register_success">Register akun berhasil!</string>
    <string name="label_invalid_email">Email tidak valid!</string>
    <string name="password_short">Kata sandi minimal harus 8 karakter!</string>
    <string name="info">Informasi</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="name_empty">Nama tidak boleh kosong</string>
    <string name="username_empty">Username tidak boleh kosong</string>
    <string name="address_empty">Alamat tidak boleh kosong</string>

    <string name="description">Deskripsi</string>
    <string name="created_date">Tanggal Dibuat</string>
    <string name="change_language_settings">Pengaturan Ubah Bahasa</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="gallery">Galeri</string>
    <string name="save">Simpan</string>
    <string name="permission">Tidak Mendapatkan Izin</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="description_empty">Deskripsi harus di isi</string>
    <string name="image_empty">Silahkan masukkan berkas gambar terlebih dahulu.</string>
    <string name="failed_take_picture">Gagal mengambil gambar</string>
    <string name="failed_start_camera">Gagal memunculkan kamera</string>
    <string name="preview">pratayang</string>
    <string name="logo">Logo</string>
    <string name="profile">profil</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_up">Daftar</string>
    <string name="otp">Masukkan code OTP yang sudah dikirimakan ke nomor +62174994484679</string>
    <string name="sendcode">Kirim Ulang Kode?</string>
    <string name="confirm">Konfirmasi</string>
    <string name="unknown_error">eror</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="hint_address">Masukkan alamat anda</string>
    <string name="hint_username">Masukkan username anda</string>
</resources>