<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Menu Item untuk Home -->
    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24" />

    <!-- Menu Item untuk Trend -->
    <item
        android:id="@+id/news_menu"
        android:title="@string/news"
        android:icon="@drawable/baseline_article_24" />

    <!-- Menu Item untuk Camera -->
    <item
        android:id="@+id/camera_menu"
        android:title="@string/camera"
        android:icon="@drawable/baseline_photo_camera_24" />

    <!-- Menu Item untuk Trend -->
    <item
        android:id="@+id/trend_menu"
        android:title="@string/trend"
        android:icon="@drawable/baseline_stacked_line_chart_24" />

    <!-- Menu Item untuk Trend -->
    <item
        android:id="@+id/user_menu"
        android:title="@string/user"
        android:icon="@drawable/baseline_account_circle_24" />
</menu>