<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_notifications"
        android:contentDescription="@string/notification_icon" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/tvNotificationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="14sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/tvNotificationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waktu"
            android:textSize="12sp"
            android:textColor="@color/dark_grey" />
    </LinearLayout>
</LinearLayout>
