<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <!-- Logo Image -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@drawable/toolbar_background"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">

        <!-- RelativeLayout untuk memisahkan posisi teks -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TextView untuk teks di kiri -->

            <!-- TextView untuk teks di tengah -->

            <TextView
                android:id="@+id/toolbar_text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/toolbar_text_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="160dp"
                android:layout_marginBottom="23dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <!-- Login Text -->
    <TextView
        android:id="@+id/textLogin"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/message_login"
        android:textColor="@color/blue_900"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_text_center"
        tools:ignore="NotSibling" />

    <!-- Email Label -->
    <TextView
        android:id="@+id/txEmail"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"

        android:layout_marginStart="32dp"
        android:text="@string/email"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLogin" />

    <!-- Email Input -->
    <com.lokalook.lokalook.ui.custom.EmailEdText
        android:id="@+id/ed_login_email"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:shadowColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <!-- Password Label -->
    <TextView
        android:id="@+id/txPassword"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:text="@string/password"
        android:textColor="@color/primary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

    <!-- Password Input -->
    <com.lokalook.lokalook.ui.custom.PasswordEdText
        android:id="@+id/ed_login_password"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/hint_password"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txPassword" />

    <!-- Login Button -->
    <Button
        android:id="@+id/buttonLog"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="sans-serif"
        android:padding="16dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ed_login_password"
        app:layout_constraintEnd_toEndOf="@id/ed_login_password"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password" />

    <!-- Register Prompt -->
    <TextView
        android:id="@+id/intRegister"
        android:alpha="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dont_have_account"
        android:textColor="@color/blue_900"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/buttonLog"
        app:layout_constraintEnd_toEndOf="@id/buttonLog"
        app:layout_constraintTop_toBottomOf="@id/buttonLog" />

    <!-- Progress Bar -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        android:layout_gravity="center" />

</androidx.constraintlayout.widget.ConstraintLayout>