<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.OtpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:background="@drawable/toolbar_background"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">

        <!-- RelativeLayout untuk memisahkan posisi teks -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/toolbar_text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/toolbar_text_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="160dp"
                android:layout_marginBottom="23dp"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="16dp">

        <!-- Label dan EditText untuk Username -->
        <TextView
            android:id="@+id/label_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/otp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- LinearLayout untuk menampung EditText OTP -->
        <TextView
            android:id="@+id/sendcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/sendcode"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="4">

            <!-- Input untuk OTP digit pertama -->
            <EditText
                android:id="@+id/otp_digit1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/sec_white"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <!-- Input untuk OTP digit kedua -->
            <EditText
                android:id="@+id/otp_digit2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/sec_white"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <!-- Input untuk OTP digit ketiga -->
            <EditText
                android:id="@+id/otp_digit3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@color/sec_white"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <!-- Input untuk OTP digit keempat -->
            <EditText
                android:id="@+id/otp_digit4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@color/sec_white"
                android:gravity="center"
                android:importantForAccessibility="yes"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>


        <!-- Button Login -->
        <Button
            android:id="@+id/register"
            android:layout_width="380dp"
            android:layout_height="47dp"
            android:layout_gravity="start"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.518" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>